[package]
name = "littoral"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tide = "0.16.0"
futures-util = "0.3.12"
env_logger = "0.8.2"
broadcaster = "1.0.0"
petname = "1.1.0"
async-dup = "1.2.2"
log = "0.4.14"
serde_json = "1.0.62"
serde = "1.0.123"
serde_derive = "1.0.123"
gh-emoji = "1.0.3"
tide-websockets = "0.2.0"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]
